disable dark mode | security fix

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -3917,7 +3917,7 @@ Usage (In Ghost editor):
 
 /* 12. Dark Mode
 /* ---------------------------------------------------------- */
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: no) {
   body {
     color: rgba(255, 255, 255, 0.75);
     background: var(--darkmode);
